--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "glasnostic-api.js",
   "scripts": {
     "build": "tsc",
-    "format": "tslint --force --fix -p . && prettier --write src/**/*",
-    "lint": "tslint -p . && prettier -c src/**/*",
+    "build:example": "tsc -p example/tsconfig.json",
+    "run-example:create-view": "node example/build/example/create-view.js",
+    "run-example:update-view": "node example/build/example/update-view.js",
+    "format": "tslint --force --fix -p . && prettier --write src/**/* example/**/*",
+    "lint": "tslint -p . && prettier -c src/**/* example/**/*",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": { "node": ">= 10.0.0" },
