--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@rollup/plugin-typescript": "^4.1.2",
     "@types/lodash": "^4.14.155",
+    "@types/minimatch": "^3.0.3",
     "@types/tough-cookie": "^4.0.0",
     "prettier": "^2.0.5",
     "rollup": "^2.15.0",
@@ -30,6 +31,7 @@
   "dependencies": {
     "got": "^11.2.0",
     "lodash": "^4.17.15",
+    "minimatch": "^3.0.4",
     "tough-cookie": "^4.0.0"
   }
 }
